@@ -10,7 +10,9 @@
     <five:registerPackage package="." />
 
     <include package="plone.indexer" />
-
+    <include package="plone.uuid" />
+    <include package="plone.app.uuid" />
+    
     <include file="permissions.zcml" />
     <include file="notifications.zcml" />
     <include file="subscribers.zcml" />
@@ -43,6 +45,7 @@
     <!-- Comments -->
 
     <class class=".comment.Comment">
+        <implements interface="plone.uuid.interfaces.IAttributeUUID" />
         <require interface=".interfaces.IComment" permission="zope2.View" />
         <require attributes="Title Creator getId getText" permission="zope2.View" />
     </class>
