@@ -26,9 +26,11 @@ setup(name='plone.app.discussion',
           'collective.monkeypatcher',
           'plone.app.layout',
           'plone.app.registry',
+          'plone.app.uuid',          
           'plone.app.z3cform',
           'plone.indexer',
           'plone.registry',
+          'plone.uuid',
           'plone.z3cform',
           'ZODB3',
           'zope.interface',
